grammar.js
    module: $ => repeat($._statement),

    _statement: $ => choice($._simple_statements, $._compound_statement),

    // Simple statements

    import_statement: $ => seq("testimportlegesher", $._import_list),

    import_prefix: $ => repeat1("."),

    relative_import: $ => seq($.import_prefix, optional($.dotted_name)),

    future_import_statement: $ =>
      seq(
        "testfromlegesher",
        "__future__",
        "testimportlegesher",
        choice($._import_list, seq("(", $._import_list, ")"))
      ),

    import_from_statement: $ =>
      seq(
        "testfromlegesher",
        field("module_name", choice($.relative_import, $.dotted_name)),
        "testimportlegesher",
        choice($.wildcard_import, $._import_list, seq("(", $._import_list, ")"))
      ),

    _import_list: $ =>
      seq(
        commaSep1(field("name", choice($.dotted_name, $.aliased_import))),
        optional(",")
      ),

    aliased_import: $ =>
      seq(
        field("name", $.dotted_name),
        "testaslegesher",
        field("alias", $.identifier)
      ),

    wildcard_import: $ => "*",

    print_statement: $ =>
      choice(
        prec(
          1,
          seq(
            "testprintlegesher",
            $.chevron,
            repeat(seq(",", field("argument", $.expression))),
            optional(",")
          )
        ),
        prec(
          -10,
          seq(
            "testprintlegesher",
            commaSep1(field("argument", $.expression)),
            optional(",")
          )
        )
      ),

    chevron: $ => seq(">>", $.expression),

    assert_statement: $ => seq("testassertlegesher", commaSep1($.expression)),

    expression_statement: $ =>
      choice(
        $.expression,
        seq(commaSep1($.expression), optional(",")),
        $.assignment,
        $.augmented_assignment,
        $.yield
      ),

    return_statement: $ =>
      seq("testreturnlegesher", optional($._expressions)),

    delete_statement: $ => seq("testdellegesher", $._expressions),

    _expressions: $ => choice(
      $.expression, $.expression_list),

    raise_statement: $ =>
      seq(
        "testraiselegesher",
        optional($._expressions),
        optional(seq("testfromlegesher", field("cause", $.expression)))
      ),

    pass_statement: $ => prec.left("testpasslegesher"),
    break_statement: $ => prec.left("testbreaklegesher"),
    continue_statement: $ => prec.left("testcontinuelegesher"),

    // Compound statements

    if_statement: $ =>
      seq(
        "testiflegesher",
        field("condition", $.expression),
        ":",
        field("consequence", $._suite),
        repeat(field("alternative", $.elif_clause)),
        optional(field("alternative", $.else_clause))
      ),

    elif_clause: $ =>
      seq(
        "testeliflegesher",
        field("condition", $.expression),
        ":",
        field("consequence", $._suite)
      ),

    else_clause: $ => seq("testelselegesher", ":", field("body", $._suite)),

    for_statement: $ =>
      seq(
        optional("testasynclegesher"),
        "testforlegesher",
        field("left", $._left_hand_side),
        "testinlegesher",
        field("right", $._expressions),
        ":",
        field("body", $._suite),
        field("alternative", optional($.else_clause))
      ),

    while_statement: $ =>
      seq(
        "testwhilelegesher",
        field("condition", $.expression),
        ":",
        field("body", $._suite),
        optional(field("alternative", $.else_clause))
      ),

    try_statement: $ =>
      seq(
        "testtrylegesher",
        ":",
        field("body", $._suite),
        choice(
          seq(
            repeat1($.except_clause),
            optional($.else_clause),
            optional($.finally_clause)
          ),
          $.finally_clause
        )
      ),

    except_clause: $ =>
      seq(
        "testexceptlegesher",
        optional(
          seq(
            $.expression,
            optional(seq(choice("testaslegesher", ","), $.expression))
          )
        ),
        ":",
        $._suite
      ),

    finally_clause: $ => seq("testfinallylegesher", ":", $._suite),

    with_statement: $ =>
      seq(
        optional("testasynclegesher"),
        "testwithlegesher",
        commaSep1($.with_item),
        ":",
        field("body", $._suite)
      ),

    with_item: $ =>
      seq(
        field("value", $.expression),
        optional(seq("testaslegesher", field("alias", $.pattern)))
      ),

    function_definition: $ =>
      seq(
        optional("testasynclegesher"),
        "testdeflegesher",
        field("name", $.identifier),
        field("parameters", $.parameters),
        optional(seq("->", field("return_type", $.type))),
        ":",
        field("body", $._suite)
      ),

    parameters: $ => seq(
      '(',
      optional($._parameters),
      ')'
    ),

    list_splat: $ => seq("*", $.expression),

    dictionary_splat: $ => seq("**", $.expression),

    global_statement: $ => seq("testgloballegesher", commaSep1($.identifier)),

    nonlocal_statement: $ =>
      seq("testnonlocallegesher", commaSep1($.identifier)),

    exec_statement: $ =>
      seq(
        "testexeclegesher",
        field("code", $.string),
        optional(seq("testinlegesher", commaSep1($.expression)))
      ),

    class_definition: $ =>
      seq(
        "testclasslegesher",
        field("name", $.identifier),
        field("superclasses", optional($.argument_list)),
        ":",
        field("body", $._suite)
      ),

    argument_list: $ =>
      seq(
        "(",
        optional(
          commaSep1(
            choice(
              $.expression,
              $.list_splat,
              $.dictionary_splat,
              alias($.parenthesized_list_splat, $.parenthesized_expression),
              $.keyword_argument
            )
          )
        ),
        optional(","),
        ")"
      ),

    decorated_definition: $ =>
      seq(
        repeat1($.decorator),
        field("definition", choice($.class_definition, $.function_definition))
      ),

    decorator: $ =>
      seq(
        "@",
        $.dotted_name,
        field("arguments", optional($.argument_list)),
        $._newline
      ),

    _suite: $ =>
      choice(
        alias($._simple_statements, $.block),
        seq($._indent, $.block),
        alias($._newline, $.block)
      ),

    block: $ => seq(repeat($._statement), $._dedent),

    expression_list: $ => prec.right(seq(
      $.expression,
      choice(
        ',',
        seq(
          repeat1(seq(
            ',',
            $.expression
          )),
          optional(',')
        ),
      ))),

    dotted_name: $ => sep1($.identifier, "."),

    // Patterns

    _parameters: $ => seq(
      commaSep1($.parameter),
      optional(',')
    ),

    default_parameter: $ => seq(
      field('name', $.identifier),
      '=',
      field('value', $.expression)
    ),

    typed_default_parameter: $ => prec(PREC.typed_parameter, seq(
      field('name', $.identifier),
      ':',
      field('type', $.type),
      '=',
      field('value', $.expression)
    )),

    not_operator: $ =>
      prec(PREC.not, seq("testnotlegesher", field("argument", $.expression))),

    boolean_operator: $ =>
      choice(
        prec.left(
          PREC.and,
          seq(
            field("left", $.expression),
            field("operator", "testandlegesher"),
            field("right", $.expression)
          )
        ),
        prec.left(
          PREC.or,
          seq(
            field("left", $.expression),
            field("operator", "testorlegesher"),
            field("right", $.expression)
          )
        )
      ),

    binary_operator: $ => {
      const table = [
        [prec.left, "+", PREC.plus],
        [prec.left, "-", PREC.plus],
        [prec.left, "*", PREC.times],
        [prec.left, "@", PREC.times],
        [prec.left, "/", PREC.times],
        [prec.left, "%", PREC.times],
        [prec.left, "//", PREC.times],
        [prec.right, "**", PREC.power],
        [prec.left, "|", PREC.bitwise_or],
        [prec.left, "&", PREC.bitwise_and],
        [prec.left, "^", PREC.xor],
        [prec.left, "<<", PREC.shift],
        [prec.left, ">>", PREC.shift]
      ];

      return choice(
        ...table.map(([fn, operator, precedence]) =>
          fn(
            precedence,
            seq(
              field("left", $.primary_expression),
              field("operator", operator),
              field("right", $.primary_expression)
            )
          )
        )
      );
    },

    _left_hand_side: $ => choice(
      $.pattern,
      $.pattern_list
    ),

    attribute: $ =>
      prec(
        PREC.call,
        seq(
          field("object", $.primary_expression),
          ".",
          field("attribute", $.identifier)
        )
      ),

    subscript: $ =>
      prec(
        PREC.call,
        seq(
          field("value", $.primary_expression),
          "[",
          commaSep1(field('subscript', choice($.expression, $.slice))),
          optional(","),
          "]"
        )
      ),

    call: $ =>
      prec(
        PREC.call,
        seq(
          field("function", $.primary_expression),
          field("arguments", choice($.generator_expression, $.argument_list))
        )
      ),

    typed_parameter: $ =>
      prec(
        PREC.typed_parameter,
        seq(
          choice($.identifier, $.list_splat_pattern, $.dictionary_splat_pattern),
          ":",
          field("type", $.type)
        )
      ),

    type: $ => $.expression,

    keyword_argument: $ =>
      seq(
        field("name", choice($.identifier, $.keyword_identifier)),
        "=",
        field("value", $.expression)
      ),

    // Literals

    list: $ => seq("[", optional($._collection_elements), "]"),

    tuple: $ => seq('(', optional($._collection_elements), ')'),

    parenthesized_expression: $ =>
      prec(
        PREC.parenthesized_expression,
        seq("(", choice($.expression, $.yield), ")")
      ),

    _collection_elements: $ =>
      seq(
        commaSep1(
          choice(
            $.expression,
            $.yield,
            $.list_splat,
            $.parenthesized_list_splat
          )
        ),
        optional(",")
      ),

    string: $ =>
      seq(
        alias($._string_start, '"'),
        repeat(
          choice(
            $.interpolation,
            $.escape_sequence,
            $._not_escape_sequence,
            $._string_content
          )
        ),
        alias($._string_end, '"')
      ),

    _not_escape_sequence: $ => "\\",

    integer: $ =>
      token(
        choice(
          seq(choice("0x", "0X"), repeat1(/_?[A-Fa-f0-9]+/), optional(/[Ll]/)),
          seq(choice("0o", "0O"), repeat1(/_?[0-7]+/), optional(/[Ll]/)),
          seq(choice("0b", "0B"), repeat1(/_?[0-1]+/), optional(/[Ll]/)),
          seq(
            repeat1(/[0-9]+_?/),
            choice(
              optional(/[Ll]/), // long numbers
              optional(/[jJ]/) // complex numbers
            )
          )
        )
      ),

    identifier: $ => /[a-zA-Zα-ωΑ-Ω_][a-zA-Zα-ωΑ-Ω_0-9]*/,

    true: $ => "testTruelegesher",
    none: $ => "testNonelegesher",

    comment: $ => token(seq("#", /.*/)),
