corpus/statements.txt
=====================================
Import statements
=====================================

testimportlegesher a, b
testimportlegesher b.c testaslegesher d
testimportlegesher a.b.c

---

(module
  (import_statement
    (dotted_name (identifier))
    (dotted_name (identifier)))
  (import_statement
    (aliased_import
      (dotted_name (identifier) (identifier))
      (identifier)))
  (import_statement
    (dotted_name (identifier) (identifier) (identifier))))

=====================================
Import-from statements
=====================================

testfromlegesher a testimportlegesher  b
testfromlegesher a testimportlegesher  *
testfromlegesher a testimportlegesher  (b, c)
testfromlegesher a.b testimportlegesher  c
testfromlegesher . testimportlegesher  b
testfromlegesher .. testimportlegesher  b
testfromlegesher .a testimportlegesher  b
testfromlegesher ..a testimportlegesher  b

---

(module
  (import_from_statement
    (dotted_name (identifier))
    (dotted_name (identifier)))
  (import_from_statement
    (dotted_name (identifier))
    (wildcard_import))
  (import_from_statement
    (dotted_name (identifier))
    (dotted_name (identifier))
    (dotted_name (identifier)))
  (import_from_statement
    (dotted_name (identifier) (identifier))
    (dotted_name (identifier)))
  (import_from_statement
    (relative_import (import_prefix))
    (dotted_name (identifier)))
  (import_from_statement
    (relative_import (import_prefix))
    (dotted_name (identifier)))
  (import_from_statement
    (relative_import
      (import_prefix)
      (dotted_name (identifier)))
      (dotted_name (identifier)))
  (import_from_statement
    (relative_import
      (import_prefix)
      (dotted_name (identifier)))
      (dotted_name (identifier))))

=====================================
Future import statements
=====================================

testfromlegesher __future__ testimportlegesher  print_statement
testfromlegesher __future__ testimportlegesher  python4
testfromlegesher __future__ testimportlegesher (absolute_import, division, print_function, unicode_literals)

---

(module
  (future_import_statement (dotted_name (identifier)))
  (future_import_statement (dotted_name (identifier)))
  (future_import_statement
    (dotted_name (identifier))
    (dotted_name (identifier))
    (dotted_name (identifier))
    (dotted_name (identifier))))

=====================================
Print statements
=====================================

testprintlegesher a
testprintlegesher b, c
testprintlegesher 0 testorlegesher 1, 1 testorlegesher 0,
testprintlegesher 0 testorlegesher 1

---

(module
  (print_statement (identifier))
  (print_statement (identifier) (identifier))
  (print_statement
    (boolean_operator (integer) (integer))
    (boolean_operator (integer) (integer)))
  (print_statement
    (boolean_operator (integer) (integer))))

=====================================
Print statements with redirection
=====================================

testprintlegesher >> a
testprintlegesher >> a, "b", "c"

---

(module
  (print_statement (chevron (identifier)))
  (print_statement (chevron (identifier)) (string) (string)))

=====================================
Assert statements
=====================================

testassertlegesher a
testassertlegesher b, c

---

(module
  (assert_statement (identifier))
  (assert_statement (identifier) (identifier)))

=====================================
Expression statements
=====================================

a
b + c
1, 2, 3
1, 2, 3,

---

(module
  (expression_statement (identifier))
  (expression_statement (binary_operator (identifier) (identifier)))
  (expression_statement (integer) (integer) (integer))
  (expression_statement (integer) (integer) (integer)))

=====================================
Delete statements
=====================================

testdellegesher a[1], b[2]

---

(module
  (delete_statement (expression_list
    (subscript (identifier) (integer))
    (subscript (identifier) (integer)))))

=====================================
Control-flow statements
=====================================

testwhilelegesher true:
  testpasslegesher
  testbreaklegesher
  testcontinuelegesher

---

(module
  (while_statement
    condition: (identifier)
    body: (block
      (pass_statement)
      (break_statement)
      (continue_statement))))

=====================================
Return statements
=====================================

testreturnlegesher
testreturnlegesher a + b, c
testreturnlegesher testnotlegesher b

---

(module
  (return_statement)
  (return_statement (expression_list
    (binary_operator (identifier) (identifier))
    (identifier)))
  (return_statement (expression_list (not_operator (identifier)))))

=====================================
If statements
=====================================

testiflegesher a:
  b
  c

---

(module
  (if_statement
    condition: (identifier)
    consequence: (block
      (expression_statement (identifier))
      (expression_statement (identifier)))))

=====================================
If else statements
=====================================

testiflegesher a:
  b
testeliflegesher c:
  d
testelselegesher:
  f

testiflegesher a:
  b
testelselegesher:
  f

testiflegesher a: b

testiflegesher a: b; c

---

(module
  (if_statement
    condition: (identifier)
    consequence: (block
      (expression_statement (identifier)))
    alternative: (elif_clause
      condition: (identifier)
      consequence: (block
        (expression_statement (identifier))))
    alternative: (else_clause
      body: (block
        (expression_statement (identifier)))))
  (if_statement
    condition: (identifier)
    consequence: (block
      (expression_statement (identifier)))
    alternative: (else_clause
      body: (block
        (expression_statement (identifier)))))
  (if_statement
    condition: (identifier)
    consequence: (block
      (expression_statement (identifier))))
  (if_statement
    condition: (identifier)
    consequence: (block
      (expression_statement (identifier))
      (expression_statement (identifier)))))

=====================================
Nested if statements
=====================================

testiflegesher a:
  testiflegesher b:
    c
  testelselegesher:
    testiflegesher e:
      f
g

---

(module
  (if_statement
    condition: (identifier)
    consequence: (block
      (if_statement
        condition: (identifier)
        consequence: (block
          (expression_statement (identifier)))
        alternative: (else_clause
          body: (block
            (if_statement
              condition: (identifier)
              consequence: (block
                (expression_statement (identifier)))))))))
  (expression_statement (identifier)))

=====================================
While statements
=====================================

testwhilelegesher a:
  b

testwhilelegesher c:
  d
testelselegesher:
  e
  f

---

(module
  (while_statement
    condition: (identifier)
    body: (block
      (expression_statement (identifier))))
  (while_statement
    condition: (identifier)
    body: (block
      (expression_statement (identifier)))
    alternative: (else_clause
      body: (block
        (expression_statement (identifier))
        (expression_statement (identifier))))))

=====================================
For statements
=====================================

testforlegesher line, i testinlegesher lines:
  testprintlegesher line
  testforlegesher character, j testinlegesher line:
    testprintlegesher character
testelselegesher:
  testprintlegesher x

testforlegesher x, testinlegesher [(1,), (2,), (3,)]:
  x

---

(module
  (for_statement
    left: (variables (identifier) (identifier))
    right: (expression_list (identifier))
    body: (block
      (print_statement
        argument: (identifier))
      (for_statement
        left: (variables (identifier) (identifier))
        right: (expression_list (identifier))
        body: (block
          (print_statement
            argument: (identifier)))))
    alternative: (else_clause
      body: (block
        (print_statement
          argument: (identifier)))))
  (for_statement
    left: (variables (identifier))
    right: (expression_list (list (tuple (integer)) (tuple (integer)) (tuple (integer))))
    body: (block
      (expression_statement (identifier)))))

=====================================
Try statements
=====================================

testtrylegesher:
  a
testexceptlegesher b:
  c
testexceptlegesher d testaslegesher e:
  f
testexceptlegesher g, h:
  i
testexceptlegesher:
  j

testtrylegesher:
  a
testexceptlegesher b:
  c
  d
testelselegesher:
  e
testfinallylegesher:
  f

---

(module
  (try_statement
    body: (block
      (expression_statement (identifier)))
    (except_clause (identifier)
      (block
        (expression_statement (identifier))))
    (except_clause (identifier) (identifier)
      (block
        (expression_statement (identifier))))
    (except_clause (identifier) (identifier)
      (block
        (expression_statement (identifier))))
    (except_clause
      (block
        (expression_statement (identifier)))))
  (try_statement
    body: (block
      (expression_statement (identifier)))
    (except_clause (identifier)
      (block
        (expression_statement (identifier))
        (expression_statement (identifier))))
    (else_clause body: (block
      (expression_statement (identifier))))
    (finally_clause (block
      (expression_statement (identifier))))))

=====================================
With statements
=====================================

testwithlegesher a testaslegesher b:
  c

---

(module
  (with_statement
    (with_item (identifier) (identifier))
    (block
      (expression_statement (identifier)))))

=====================================
Async Function definitions
=====================================

testasynclegesher testdeflegesher a():
  b

testasynclegesher testdeflegesher c(d):
  e

testasynclegesher testdeflegesher g(g, h,):
  i

testasynclegesher testdeflegesher c(a: str):
  a

testasynclegesher testdeflegesher c(a: b.c):
  a

testasynclegesher testdeflegesher d(a: Sequence[T]) -> T:
  a

testasynclegesher testdeflegesher i(a, b=c, *c, **d):
  a

testasynclegesher testdeflegesher d(a: str) -> testNonelegesher:
  testreturnlegesher testNonelegesher

testasynclegesher testdeflegesher d(a:str="default", b=c) -> testNonelegesher:
  testreturnlegesher testNonelegesher

---

(module
  (function_definition
    name: (identifier)
    parameters: (parameters)
    body: (block
      (expression_statement (identifier))))
  (function_definition
    name: (identifier)
    parameters: (parameters (identifier))
    body: (block
      (expression_statement (identifier))))
  (function_definition
    name: (identifier)
    parameters: (parameters (identifier) (identifier))
    body: (block
      (expression_statement (identifier))))
  (function_definition
    name: (identifier)
    parameters: (parameters
      (typed_parameter
        (identifier)
        type: (type (identifier))))
    body: (block
      (expression_statement (identifier))))
  (function_definition
    name: (identifier)
    parameters: (parameters
      (typed_parameter
        (identifier)
        type: (type (attribute
          object: (identifier)
          attribute: (identifier)))))
    body: (block
      (expression_statement (identifier))))
  (function_definition
    name: (identifier)
    parameters: (parameters
      (typed_parameter
        (identifier)
        type: (type (subscript value: (identifier) subscript: (identifier)))))
    return_type: (type (identifier))
    body: (block
      (expression_statement (identifier))))
  (function_definition
    name: (identifier)
    parameters: (parameters
      (identifier)
      (default_parameter
        name: (identifier)
        value: (identifier))
      (list_splat (identifier))
      (dictionary_splat (identifier)))
    body: (block
      (expression_statement (identifier))))
  (function_definition
    name: (identifier)
    parameters: (parameters
      (typed_parameter (identifier) type: (type (identifier))))
    return_type: (type (none))
    body: (block
      (return_statement (expression_list (none)))))
  (function_definition
    name: (identifier)
    parameters: (parameters
      (typed_default_parameter
        name: (identifier)
        type: (type (identifier))
        value: (string))
      (default_parameter
        name: (identifier)
        value: (identifier)))
    return_type: (type (none))
    body: (block
      (return_statement (expression_list (none))))))

=====================================
Function definitions
=====================================

testdeflegesher e((a,b)):
  testreturnlegesher (a,b)

testdeflegesher e(*list: str):
  testpasslegesher

testdeflegesher e(**list: str):
  testpasslegesher

testdeflegesher f():
  testnonlocallegesher a

testdeflegesher g(h, i, *, j, k=100, **kwarg):
  testreturnlegesher h,i,j,k,kwarg

testdeflegesher h(*a):
  i((*a))
  j(((*a)))

---

(module
  (function_definition
    name: (identifier)
    parameters: (parameters (tuple (identifier) (identifier)))
    body: (block
      (return_statement (expression_list (tuple (identifier) (identifier))))))
  (function_definition
    name: (identifier)
    parameters: (parameters (typed_parameter
      (list_splat (identifier))
      type: (type (identifier))))
    body: (block
      (pass_statement)))
  (function_definition
    name: (identifier)
    parameters: (parameters (typed_parameter
      (dictionary_splat (identifier))
      type: (type (identifier))))
    body: (block
      (pass_statement)))
  (function_definition
    name: (identifier)
    parameters: (parameters)
    body: (block
      (nonlocal_statement (identifier))))
  (function_definition
    name: (identifier)
    parameters: (parameters
      (identifier)
      (identifier)
      (list_splat)
      (identifier)
      (default_parameter name: (identifier) value: (integer))
      (dictionary_splat (identifier)))
    body: (block
      (return_statement (expression_list
        (identifier)
        (identifier)
        (identifier)
        (identifier)
        (identifier)))))
   (function_definition
     name: (identifier)
     parameters: (parameters (list_splat (identifier)))
     body: (block
       (expression_statement
         (call function:
           (identifier)
           arguments:
             (argument_list (parenthesized_expression (list_splat (identifier))))))
       (expression_statement
         (call function:
           (identifier)
           arguments: (argument_list (parenthesized_expression (parenthesized_expression (list_splat (identifier))))))))))

====================================================
Class definitions
====================================================

testclasslegesher A:
  testdeflegesher b(self):
    testreturnlegesher c
testclasslegesher B():
  testpasslegesher
testclasslegesher B(method1):
  testdeflegesher method1(self):
    testreturnlegesher
testclasslegesher C(method1, Sequence[T]):
  testpasslegesher
testclasslegesher D(Sequence[T, U]):
  testpasslegesher

---

(module
  (class_definition
    (identifier)
    (block
      (function_definition
        (identifier)
        (parameters (identifier))
        (block
          (return_statement (expression_list (identifier)))))))
 (class_definition
    (identifier)
    (argument_list)
    (block
      (pass_statement)))
 (class_definition
    (identifier)
    (argument_list (identifier))
    (block
      (function_definition
        (identifier)
        (parameters (identifier))
        (block
          (return_statement)))))
 (class_definition
    (identifier)
    (argument_list (identifier) (subscript (identifier) (identifier)))
    (block
      (pass_statement)))
 (class_definition
    (identifier)
    (argument_list (subscript (identifier) (identifier) (identifier)))
    (block
      (pass_statement))))

====================================================
Class definitions with superclasses
====================================================

testclasslegesher A(B, C):
  testdeflegesher d():
    e

---

(module
  (class_definition
    (identifier)
    (argument_list (identifier) (identifier))
    (block
      (function_definition
        (identifier)
        (parameters)
        (block
          (expression_statement (identifier)))))))

====================================================
Decorated definitions
====================================================

@a.b
testclasslegesher C:
  @f()
  @d(1)
  @e(2, 3)
  @a(b=testTruelegesher)
  @a(*b)
  @a(**c)
  @a(1, b=testTruelegesher, *b, **c)
  testdeflegesher f():
    g

  @f()
  testasynclegesher testdeflegesher f():
    g

---

(module
  (decorated_definition
    (decorator (dotted_name (identifier) (identifier)))
    (class_definition (identifier) (block
      (decorated_definition
        (decorator
          (dotted_name (identifier))
          (argument_list))
        (decorator
          (dotted_name (identifier))
          (argument_list
            (integer)))
        (decorator
          (dotted_name (identifier))
          (argument_list
            (integer) (integer)))
        (decorator
          (dotted_name (identifier))
          (argument_list
            (keyword_argument (identifier) (true))))
        (decorator
          (dotted_name (identifier))
          (argument_list
            (list_splat (identifier))))
        (decorator
          (dotted_name (identifier))
          (argument_list
            (dictionary_splat (identifier))))
        (decorator
          (dotted_name (identifier))
          (argument_list
            (integer)
            (keyword_argument (identifier) (true))
            (list_splat (identifier))
            (dictionary_splat (identifier))))
        (function_definition
          (identifier)
          (parameters)
          (block (expression_statement (identifier)))))
      (decorated_definition
        (decorator
          (dotted_name (identifier))
          (argument_list))
        (function_definition
          (identifier)
          (parameters)
          (block (expression_statement (identifier)))))))))

====================================================
Raise statements
====================================================

testraiselegesher
testraiselegesher RuntimeError('NO')
testraiselegesher RunTimeError('NO') testfromlegesher e

---

(module
  (raise_statement)
  (raise_statement
    (expression_list (call (identifier) (argument_list (string)))))
  (raise_statement
    (expression_list (call (identifier) (argument_list (string))))
    (identifier)))

====================================================
Comments
====================================================

testprintlegesher a
# hi
testprintlegesher b # bye
testprintlegesher c

---

(module
  (print_statement (identifier))
  (comment)
  (print_statement (identifier))
  (comment)
  (print_statement (identifier)))

====================================================
Comments at different indentation levels
====================================================

testiflegesher a:
  # one
# two
    # three
  b
    # four
  c

---

(module
  (if_statement (identifier)
    (comment)
    (comment)
    (comment)
    (block
      (expression_statement (identifier))
      (comment)
      (expression_statement (identifier)))))

====================================================
Comments after dedents
====================================================

testiflegesher a:
  b

# one
c

---

(module
  (if_statement
    (identifier)
    (block
      (expression_statement (identifier))))
  (comment)
  (expression_statement (identifier)))

====================================================
Newline tokens followed by comments
====================================================

testprintlegesher "a"
  # We need to recognize the newline *preceding* this comment, because there's no newline after it
---

(module (print_statement (string)) (comment))

====================================================
Global statements
====================================================

testgloballegesher a
testgloballegesher a, b

---

(module
  (global_statement (identifier))
  (global_statement (identifier) (identifier)))

====================================================
Exec statements
====================================================

testexeclegesher '1+1'
testexeclegesher 'x+=1' testinlegesher testNonelegesher
testexeclegesher 'x+=1' testinlegesher a, b

---

(module
  (exec_statement (string))
  (exec_statement (string) (none))
  (exec_statement (string) (identifier) (identifier)))

==================================================
Extra newlines
==================================================

testiflegesher a:


    b()


    c()


    testdeflegesher d():


        e()


    f()

---

(module
  (if_statement (identifier) (block
    (expression_statement (call (identifier) (argument_list)))
    (expression_statement (call (identifier) (argument_list)))
    (function_definition (identifier) (parameters) (block
      (expression_statement (call (identifier) (argument_list)))))
    (expression_statement (call (identifier) (argument_list))))))
